# risc-v-simulator

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  PLANS.md  README.md  run_coverage.sh  run_tests.py  setup_riscv_env.sh  test_mret_analysis.cpp
.claude/agents/: cpp-processor-code-reviewer.md
.github/workflows/: ci.yml
.kiro/steering/: architecture.md  development.md  ooo_cpu_difftest.md  product.md
.openclaw/: branch-predictor-debug.md
benchmarks/: README.md
benchmarks/custom/lsu/: bench_common.h  lsu_mlp.c  lsu_overlap_mix.c  lsu_pair_alias.c  lsu_pointer_chase.c  lsu_store_forward.c  lsu_stride_walk.c  stream_copy.c  stream_triad.c
benchmarks/manifest/: default.json  lsu_foundation.json  memory_first_baseline.json  memory_learning.json
configs/dramsim3/: xiangshan_DDR4_8Gb_x8_3200_2ch.ini
docs/: API文档.md  advanced_prefetchers_guide.html  draft.md  lsu_interactive_guide.html  ooo-lsu-cache-architecture.html  plan.md  plans.md  prefetcher_interactive_guide.html  requirements.md  代码架构文档.md
docs/adr/: 0001-stage-contexts-are-stage-interfaces.md  0002-ooo-recovery-owns-pipeline-cleanup.md  0003-use-execplans-for-long-running-investigations.md  0004-retire-cdb-as-domain-boundary.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/exec-plans/active/: ooo-stage-interface-deepening.md
docs/superpowers/plans/: 2026-04-10-prefetch-convergence.md  2026-04-10-spec06-single-slice.md  2026-04-13-spec06-minimal-sv39.md  2026-04-13-spec06-parallel-batch.md
docs/superpowers/specs/: 2026-04-10-prefetch-convergence-design.md  2026-04-10-spec06-single-slice-design.md  2026-04-13-spec06-minimal-sv39-design.md  (+1 more)
include/: alu.h  cpu.h  cpu_interface.h  decoder.h  elf_loader.h  instruction_executor.h  memory.h  ooo_cpu.h  ooo_types.h  register_rename.h  reorder_buffer.h  reservation_station.h  simulator.h  syscall_handler.h  types.h
include/common/: cpu_interface.h  debug_types.h  types.h
include/core/: alu.h  csr_utils.h  decoder.h  instruction_executor.h  memory.h
include/cpu/inorder/: cpu.h
include/system/: address_translation.h  checkpoint_importer.h  checkpoint_recipe.h  checkpoint_runner.h  checkpoint_types.h  difftest.h  elf_loader.h  pipeline_tracer.h  privilege_state.h  simulator.h  sv39_page_walker.h  syscall_handler.h
programs/: CMakeLists.txt  README.md  test_arithmetic.c  test_debug.c  test_extensions.c  test_printf.c  test_simple.c  test_simple_debug.c  test_simple_printf.c
runtime/: Makefile  link.ld  minilib.c  minilib.h
src/: CMakeLists.txt  alu.cpp  cpu.cpp  cpu_factory.cpp  debug_types.cpp  decoder.cpp  elf_loader.cpp  instruction_executor.cpp  main.cpp  memory.cpp  ooo_cpu.cpp  register_rename.cpp  reorder_buffer.cpp  reservation_station.cpp  simulator.cpp  syscall_handler.cpp
src/common/: CMakeLists.txt  debug_types.cpp  types.cpp
src/core/: CMakeLists.txt  alu.cpp  decoder.cpp  instruction_executor.cpp  memory.cpp
src/cpu/: CMakeLists.txt  cpu_factory.cpp
src/cpu/inorder/: CMakeLists.txt  cpu.cpp
src/cpu/ooo/: CMakeLists.txt  branch_predictor.cpp  commit_control_flow_effects.cpp  commit_memory_effects.cpp  commit_register_effects.cpp  commit_retire_effects.cpp  commit_system_effects.cpp  completion_fabric.cpp  dispatch_admission.cpp  dramsim3_memory_timing_backend.cpp  dynamic_inst.cpp  execute_control_recovery.cpp  execute_dcache_access.cpp  execute_host_comm_access.cpp  execute_load_access.cpp  execute_load_completion.cpp  execute_load_hazard.cpp  execute_load_value.cpp  execute_memory_inflight.cpp  execute_memory_order.cpp  execute_semantics.cpp  execute_store_access.cpp  issue_ready_select.cpp  memory_timing_backend.cpp  ooo_cpu.cpp  ooo_recovery.cpp  perf_counters.cpp  register_rename.cpp  reorder_buffer.cpp  reservation_station.cpp  store_buffer.cpp
src/cpu/ooo/cache/: CMakeLists.txt  blocking_cache.cpp  non_blocking_cache.cpp
src/cpu/ooo/stages/: CMakeLists.txt  commit_stage.cpp  decode_stage.cpp  dispatch_stage.cpp  execute_stage.cpp  fetch_stage.cpp  issue_stage.cpp  writeback_stage.cpp
src/system/: CMakeLists.txt  address_translation.cpp  checkpoint_importer.cpp  checkpoint_recipe.cpp  checkpoint_runner.cpp  difftest.cpp  elf_loader.cpp  pipeline_tracer.cpp  privilege_state.cpp  simulator.cpp  sv39_page_walker.cpp  syscall_handler.cpp
task/: 32-64.md  add-debug.md  br-flush.md  difftest.md  dyn-inst.md  rv64f.md
tasks/: difftest-memory.md  dual-issue-progress.md  ld-debug.md  log-refactor.md  logging-rfc.md  lsu-memory-roadmap.md  memory-first-round0-report.md  memory-first-round2-prefetch-report.md  memory-midcore-progress.md  ooo-split.md  test-coverage.md
tests/: CMakeLists.txt  raw_war_test.cpp  test_address_translation.cpp  test_blocking_cache.cpp  test_branch_predictor.cpp  test_checkpoint_batch_runner.py  test_checkpoint_importer.cpp  test_checkpoint_recipe.cpp  test_checkpoint_runner.cpp  test_commit_control_flow_effects.cpp  test_commit_memory_effects.cpp  test_commit_register_effects.cpp  test_commit_retire_effects.cpp  test_commit_stage.cpp  test_commit_system_effects.cpp  test_completion_fabric.cpp  test_cpu.cpp  test_csr_utils.cpp  test_decode_stage.cpp  test_difftest.cpp  test_dispatch_admission.cpp  test_dispatch_stage.cpp  test_execute_control_recovery.cpp  test_execute_dcache_access.cpp  test_execute_host_comm_access.cpp  test_execute_load_access.cpp  test_execute_load_completion.cpp  test_execute_load_hazard.cpp  test_execute_load_value.cpp  test_execute_memory_inflight.cpp  test_execute_memory_order.cpp  test_execute_stage.cpp  test_execute_store_access.cpp  test_extensions.cpp  test_fetch_stage.cpp  test_icache_fetch_state.cpp  test_instruction_executor.cpp  test_issue_ready_select.cpp  test_issue_stage.cpp  test_memory.cpp  (+13 more)
tools/benchmarks/: build_coremark.sh  build_embench_iot.sh  build_lsu_microbench.sh  fetch_external_benchmarks.sh  import_embench_binaries.sh  run_checkpoint_batch.py  run_memory_learning.sh  run_perf_suite.py
tools/riscof/: README.md  config.ini  config_ooo.ini
utils/: test_debug_categories.sh
(+49 files in other folders)
